--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,5 +1,6 @@
 .header {
     position: relative;
+    z-index: 2;
     padding: 5rem 4rem;
 
     @media only screen and (min-width: 800px) {
@@ -145,7 +146,7 @@
         &__social-icons {
             position: absolute;
             left: 50%;
-            bottom: 6rem;
+            bottom: calc(20vh + 4rem);
             transform: translate(-50%);
             
             @media only screen and (min-width: 800px) {
@@ -176,7 +177,7 @@
             display: flex;
             flex-direction: column;
             width: 100%;
-            height: 100vh;
+            height: 120vh;
             opacity: 1;
             transition: opacity .5s;
         }
